problemma fix 6